feature: updated auth responses to not redirect but return informative response. created users management db tables, now saving user_id in session store, added basic global exception handler, restructured the project.

--- a/src/server/views/register.html
+++ b/src/server/views/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Register</h1>
-  <form action="/auth/register" method="post">
+  <form action="/users/auth/register" method="post">
     <p><label>Username: <input type="text" name="username"/></label></p>
     <p><label>Password: <input type="password" name="password"/></label></p>
     <p><label>First Name: <input type="text" name="first_name"/></label></p>
