--- a/src/server/views/status.html
+++ b/src/server/views/status.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p>You are authenticated.</p>
-  <p><a href="/auth/logout">Logout</a>?</p>
+  <p><a href="/users/auth/logout">Logout</a>?</p>
 </body>
 </html>
